@@ -26,6 +26,7 @@
     * 0990 FIX: Fix HTTP error handling in bulk inventory...
     * 1004 FIX: Fix exception when saving rules, caused by empty item
     * 0947 FIX: WATO snapshots: fixed missing files on restoring nagvis backup domains
+    * 0826 FIX: Fixed problem where user access times were not updated correctly
 
     Reporting & Availability:
     * 0991 FIX: Availability: optionally show time stamps as UNIX epoch time...
